# py_ci_learn

./: .gitignore  .travis.yml  README.md  pyproject.toml
ci_learn/: main.py
tests/: just_regular_test.py
