[tool.poetry]
name = "py_ci_learn"
version = "0.0.1"
description = ""
authors = ["maximilionus <xxxarakxxx@gmail.com>"]
packages = [
    { include = "ci_learn" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
